# Yebelo

./: .gitignore  Cargo.toml  console-config.yml  docker-compose.yml
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
src/: consumer_main.rs  main.rs
src/api/: handlers.rs  routes.rs
src/consumer/: data_processor.rs  kafka_consumer.rs  mod.rs
src/models/: mod.rs  rsi_data.rs  trade_data.rs
src/producer/: data_generator.rs  kafka_producer.rs  mod.rs
